<resources>
    <string name="search_bar_placeholder">When What</string>
    <string name="app_name" translatable="false">Localee</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- Slide settings -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <!-- Titles and descriptions of the slides -->
    <string name="slide_1_title">Meet Localee!</string>
    <string name="slide_1_desc">Find cultural events near you</string>

    <string name="slide_2_title">Find your locals!</string>
    <string name="slide_2_desc">Look for all kinds of events</string>

    <string name="slide_3_title">Create your own!</string>
    <string name="slide_3_desc">You can create and share your cultural event</string>

    <string name="slide_4_title">Have fun!</string>
    <string name="slide_4_desc">Now take your phone to the next adventure!</string>

    <string name="title_events">Event</string>
    <string name="title_map">Map</string>
    <string name="title_add">Create</string>
    <string name="title_account">Account</string>
    <string name="description">Description</string>
    <string name="created_by">Created by</string>
    <string name="near_you">near you</string>
    <string name="contact">contact</string>
    <string name="send_email">Send an email</string>
    <string name="email_app_error">There\'s no email app installed</string>

    <!-- Strings related to search dialog -->
    <string name="when">When</string>
    <string name="what">What</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This month</string>
    <string name="food">Food</string>
    <string name="music">Music</string>
    <string name="art">Art</string>
    <string name="other">Outro</string>
    <string name="sports">Sports</string>
    <string name="comedy">Comedy</string>
    <string name="movies">Movies</string>
    <string name="tech">Tech</string>
    <string name="category">Category</string>
    <string name="talks">Talks</string>
    <string name="community">Community</string>
    <string name="cancel">Cancel</string>
    <string name="event_name">Event Name</string>
    <string name="event_created">Event Created</string>
    <string name="event_not_created">Event not Created</string>
    <string name="see">See</string>
    <string name="event_description">Event Description</string>
    <string name="photo_uploaded">image uploaded successfully!</string>
    <string name="photo_not_uploaded">error uploading image!</string>
    <string name="submit">Submit</string>
    <string name="validation_error">All fields must be filled properly</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="all">All</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBto9GpoH1zA1zsBKVd7vNLxZFuQa5SQhQ
    </string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">No account yet? Create one</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="lets_go">I found this event on Localee!</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="user_not_logged">User not logged in</string>
    <string name="send_via">Share using</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
