<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@color/bg_screen1"/>

    <TextView
        android:id="@+id/txtview_when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textSize="16dp"
        android:text="@string/when"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txtview_today"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dialog_search_txtview_padding"
            android:paddingBottom="@dimen/dialog_search_txtview_padding"
            android:background="@drawable/alpha_circle_border_pink"
            android:textColor="@android:color/white"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/today"/>

        <TextView
            android:id="@+id/txtview_week"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dialog_search_txtview_padding"
            android:paddingBottom="@dimen/dialog_search_txtview_padding"
            android:background="@drawable/alpha_circle_border"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/this_week"/>

        <TextView
            android:id="@+id/txtview_month"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dialog_search_txtview_padding"
            android:paddingBottom="@dimen/dialog_search_txtview_padding"
            android:background="@drawable/alpha_circle_border"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:text="@string/this_month"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtview_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textSize="16sp"
        android:text="@string/what"/>

    <TextView
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:id="@+id/txtview_all"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="@dimen/dialog_search_txtview_width"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:padding="@dimen/dialog_search_txtview_padding"
        android:background="@drawable/alpha_circle_border_pink"
        android:gravity="center"
        android:text="@string/all"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txtview_music"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:background="@drawable/alpha_circle_border"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:text="@string/music"/>

        <TextView
            android:id="@+id/txtview_food"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_search_drawble_padding"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:gravity="center"
            android:background="@drawable/alpha_circle_border"
            android:layout_toRightOf="@id/txtview_music"
            android:text="@string/food"/>

        <TextView
            android:id="@+id/txtview_sports"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_search_drawble_padding"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:gravity="center"
            android:background="@drawable/alpha_circle_border"
            android:layout_toRightOf="@id/txtview_food"
            android:text="@string/sports"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txtview_art"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:background="@drawable/alpha_circle_border"
            android:text="@string/art"/>

        <TextView
            android:id="@+id/txtview_movies"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_search_drawble_padding"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:gravity="center"
            android:layout_toRightOf="@id/txtview_art"
            android:background="@drawable/alpha_circle_border"
            android:text="@string/movies"/>

        <TextView
            android:id="@+id/txtview_tech"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_search_drawble_padding"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:gravity="center"
            android:layout_toRightOf="@id/txtview_movies"
            android:background="@drawable/alpha_circle_border"
            android:text="@string/tech"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txtview_comedy"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:gravity="center"
            android:background="@drawable/alpha_circle_border"
            android:layout_alignParentStart="true"
            android:text="@string/comedy"/>

        <TextView
            android:id="@+id/txtview_talks"
            android:layout_width="@dimen/dialog_search_txtview_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:layout_marginLeft="@dimen/dialog_search_drawble_padding"
            android:layout_toRightOf="@id/txtview_comedy"
            android:background="@drawable/alpha_circle_border"
            android:text="@string/talks"/>

        <TextView
            android:id="@+id/txtview_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_search_txtview_padding"
            android:layout_marginLeft="@dimen/dialog_search_drawble_padding"
            android:gravity="center"
            android:layout_toRightOf="@id/txtview_talks"
            android:background="@drawable/alpha_circle_border"
            android:text="@string/other"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#e0e0e0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_apply"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="Ok"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel"/>

    </RelativeLayout>

</LinearLayout>